# example-cpp-ci-project

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  .vcpkg  CMakeLists.txt  LICENSE  README.md  example_benchmark.cpp  example_simple.cpp  vcpkg.json
.ci/: build-project-with-clang-cl.ps1  build-project.ps1  build-project.sh  install-vcpkg.ps1  install-vcpkg.sh
.circleci/: config.yml
.github/workflows/: ci.yml  continuous-integration.yml
cmake/: DefaultCompilerOptionsAndWarnings.cmake  Testing.cmake
src/example/: CMakeLists.txt  main.cpp
src/example/add/: add.cpp  add.hpp  add.test.cpp
src/example/mul/: mul.cpp  mul.hpp  mul.test.cpp
src/example/sub/: sub.cpp  sub.hpp  sub.test.cpp
src/show_info/: CMakeLists.txt  main.cpp
